--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -4,6 +4,9 @@
         layout:decorate="~{layout}">
 <head>
     <title>Client Tasks</title>
+
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+
 </head>
 
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
@@ -66,7 +69,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" STYLE="width='100%'; cellspacing='0'" >
+                    <table class="table table-bordered" id="clientTasksTable" STYLE="width='100%'; cellspacing='0'" >
                         <thead>
                         <tr>
                             <th>Task ID</th>
@@ -82,8 +85,8 @@
                             <th>Rate</th>
                         </tr>
                         </thead>
-                        <tbody th:each="task :${tasks}">
-                        <tr>
+                        <tbody >
+                        <tr th:each="task :${tasks}">
                             <td th:text="${task.id}"></td>
                             <td th:text="${task.title}"></td>
                             <td th:text="${task.description}"></td>
@@ -121,61 +124,70 @@
                                     <i class="fas fa-times"></i>
                                 </a>
                             </td>
-                            <td>
+                            <td style="text-align: center; white-space: nowrap;">
                                 <a data-toggle="modal" data-target="#Modal"
-                                   title="Rate"
+                                   title="Rate Service Provider"
                                    class="btn btn-info btn-circle btn-sm">
                                     <i class="fas fa-star"></i>
                                 </a>
+
+                                <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Rate your Service Provider</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form class="rating" th:action="@{/client/tasks/{taskId}/rate(taskId=${task.id})}"  th:object="${rating}" method="post">
+                                                    <div class="form-group row">
+                                                        <div class="col-sm-6 mb-3 mb-sm-0">
+                                                            <label>Rate your Service Provider:</label>
+                                                            <input type="number"
+                                                                   class="form-control"
+                                                                   placeholder="0-5"
+                                                                   min="0" max="5"
+                                                                   th:field="*{serviceProviderRating}"
+                                                                   required="required">
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-12">
+                                                        <label>Rating Description:</label>
+                                                        <textarea type="text"
+                                                                  class="form-control custom-textarea"
+                                                                  th:field="*{serviceProviderRatingDescription}"
+                                                                  required="required"></textarea>
+                                                    </div>
+                                                    <br>
+                                                    <button type="submit" class="btn btn-primary btn-user btn-block">
+                                                        Submit Rating
+                                                    </button>
+                                                </form>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
 
-                        <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Rate your Service Provider</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form class="rating" th:action="@{/client/tasks/{taskId}/rate(taskId=${task.id})}"  th:object="${rating}" method="post">
-                                            <div class="form-group row">
-                                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                                    <label>Rate your Service Provider:</label>
-                                                    <input type="number"
-                                                           class="form-control"
-                                                           placeholder="0-5"
-                                                           min="0" max="5"
-                                                           th:field="*{serviceProviderRating}"
-                                                           required="required">
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-12">
-                                                <label>Rating Description:</label>
-                                                <textarea type="text"
-                                                          class="form-control custom-textarea"
-                                                          th:field="*{serviceProviderRatingDescription}"
-                                                          required="required"></textarea>
-                                            </div>
-                                            <br>
-                                            <button type="submit" class="btn btn-primary btn-user btn-block">
-                                                Submit Rating
-                                            </button>
-                                        </form>
-                                    </div>
 
-                                </div>
-                            </div>
-                        </div>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
+    </div>
+
+
+    <script type="text/javascript" th:src="@{/vendor/datatables/jquery.dataTables.min.js}" defer></script>
+    <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
+    <script type="text/javascript" th:src="@{/js/scripts.js}" defer></script>
 
 </section>
+
 
 </body>
 </html>
