--- a/src/main/resources/templates/serviceprovider-tasks-list.html
+++ b/src/main/resources/templates/serviceprovider-tasks-list.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
     <title>Service Provider Task List</title>
@@ -108,7 +109,7 @@
     <script type="text/javascript" th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/searchPanes.bootstrap4.min.js}" defer></script>
     <script type="text/javascript" th:src="@{/vendor/datatables/select.bootstrap4.min.js}" defer></script>
-    <script type="text/javascript" th:src="@{/js/table-tasks-serviceprovider.js}" defer></script>
+    <script type="text/javascript" th:src="@{/js/scripts.js}" defer></script>
 
 </section>
 
