--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -70,7 +70,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-secondary text-uppercase mb-1">
                                     Pending Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${pendingTaskCount}"></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${pendingTaskCount}" id="pendingTasks"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-hourglass-half fa-2x text-gray-300"></i>
@@ -87,7 +87,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                     Ongoing Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${ongoingTaskCount}"></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${ongoingTaskCount}" id="ongoingTasks"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-spinner fa-2x text-gray-300"></i>
@@ -105,7 +105,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                     Completed Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${completedTaskCount}"></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${completedTaskCount}" id="completedTasks"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-check-square fa-2x text-gray-300"></i>
@@ -123,7 +123,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
                                     Cancelled Requests</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${cancelledTaskCount}"></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${cancelledTaskCount}" id="cancelledTasks"></div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-ban fa-2x text-gray-300"></i>
@@ -135,6 +135,59 @@
 
         </div>
 
+        <div class="row">
+
+            <!-- Bar Chart -->
+            <div class="col-xl-8 col-lg-7">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Tasks By Label</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="chart-bar">
+                            <canvas id="myBarChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Pie Chart -->
+            <div class="col-xl-4 col-lg-5">
+                <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Task Requests</h6>
+                    </div>
+                    <!-- Card Body -->
+                    <div class="card-body">
+                        <div class="chart-pie pt-4 pb-2">
+                            <canvas id="myPieChart"></canvas>
+                        </div>
+                        <div class="mt-4 text-center small">
+                            <span class="mr-2">
+                                <i class="fas fa-circle text-secondary"></i> Pending
+                            </span>
+                            <span class="mr-2">
+                                <i class="fas fa-circle text-warning"></i> Ongoing
+                            </span>
+                            <span class="mr-2">
+                                <i class="fas fa-circle text-success"></i> Completed
+                            </span>
+                            <span class="mr-2">
+                                <i class="fas fa-circle text-danger"></i> Cancelled
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <script type="text/javascript" th:src="@{/vendor/chart.js/Chart.min.js}" defer></script>
+<!--        <script type="text/javascript" th:src="@{/js/demo/chart-area-demo.js}" defer></script>-->
+        <script type="text/javascript" th:src="@{/js/demo/chart-bar-demo.js}" defer></script>
+        <script type="text/javascript" th:src="@{/js/demo/chart-pie-demo.js}" defer></script>
 
 
     </section>
