--- a/src/main/resources/templates/client-profile.html
+++ b/src/main/resources/templates/client-profile.html
@@ -67,11 +67,8 @@
                     <div class="card-header">Profile Picture</div>
                     <div class="card-body text-center">
                         <!-- Profile picture image-->
-                        <img class="img-account-profile rounded-circle mb-2" src="/assets/img/profile.jpg" alt="">
-                        <!-- Profile picture help block-->
-                        <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
-                        <!-- Profile picture upload button-->
-                        <button class="btn btn-primary" type="button">Upload new image</button>
+                        <img class="img-account-profile rounded-circle mb-2" src="/assets/img/undraw_profile_2.svg" alt="">
+
                     </div>
                 </div>
             </div>
